[TSLA-8721] Provide the combination of groupBy fields allowed (#64)
