# cc-dashboard-query-api/openapi.yaml
@@ -48,6 +48,10 @@ components:
           items:
             $ref: '#/components/schemas/CollectionField'
           type: array
+        groupBys:
+          items:
+            $ref: '#/components/schemas/CollectionGroupBy'
+          type: array
         name:
           type: string
       type: object
@@ -65,6 +69,11 @@ components:
           items:
             type: string
           type: array
+      type: object
+    CollectionGroupBy:
+      properties:
+        field:
+          type: string
       type: object
     QueryRequest:
       properties:
