# cc-dashboard-query-api/pkg/internal/domain/collections/collection_groupby.go
@@ -1,0 +1,6 @@
+package collections
+
+type GroupBy interface {
+	Field() FieldName
+	Nested() []GroupBy
+}
