# cc-dashboard-query-api/pkg/internal/domain/collections/collection_groupby_generic.go
@@ -1,0 +1,10 @@
+package collections
+
+type groupBy struct {
+	field  FieldName
+	nested []GroupBy
+}
+
+func (g groupBy) Field() FieldName { return g.field }
+
+func (g groupBy) Nested() []GroupBy { return g.nested }
